--- a/templates/home.html
+++ b/templates/home.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Translator API</title>
+    <title>MILIAPI</title>
 </head>
 <body>
-<h1>Translator API</h1>
-<p>URL format: http://127.0.0.1:5001/api/v1/word</p>
-<p>URL Example: http://127.0.0.1:5001/api/v1/sun</p>
+
 </body>
 </html>
